[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Lucas Muller Gomes <lmgomes96@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tornado = "^6.4.1"
motor = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
